fix footer links on small screen

--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 3rem;
+    gap: 5rem;
     margin: auto;
 
     @media screen and (max-width: 1200px) {
@@ -24,11 +24,15 @@
   }
 
   &__logo {
-    flex-basis: 25%;
+    flex-basis: 30%;
     text-align: center;
 
+    min-width: 15rem;
+
     img {
-      width: 100%;
+      width: 80%;
+      height: auto;
+      object-fit: cover;
     }
   }
 
@@ -38,19 +42,43 @@
     flex-basis: 75%;
     align-items: flex-start;
     justify-content: space-between;
+    gap: 5rem;
 
     @media screen and (max-width: 750px) {
       flex-basis: 100%;
     }
+    @media screen and (max-width: 550px) {
+      flex-direction: column-reverse;
+      gap: 4rem;
+      flex-basis: 100%;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
+    }
 
     ul {
       display: flex;
+      flex-wrap: wrap;
       flex-direction: column;
       align-items: flex-start;
       list-style: none;
       padding: 0;
       font-size: 1.6rem;
       gap: 1rem;
+
+      @media screen and (max-width: 550px) {
+        width: 100%;
+        flex-direction: row;
+        text-align: center;
+        justify-content: center;
+
+        li {
+          &:not(:last-child) {
+            border-right: 1px solid var(--border-color);
+            padding-right: 1rem;
+          }
+        }
+      }
       a {
         text-decoration: none;
         font-family: inherit;
@@ -68,14 +96,5 @@
       font-weight: 500;
       margin-bottom: 1.5rem;
     }
-  }
-}
-
-.links {
-  &__dormant {
-  }
-  &__contacts {
-  }
-  &__social-media {
   }
 }
