--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -65,7 +65,8 @@
   }
 
   &__logo {
-    width: 25%;
+    width: 20%;
+    min-width: 15rem;
     object-fit: cover;
   }
 
